Fixes border-radius squash

--- a/styles/newTodo.css
+++ b/styles/newTodo.css
@@ -159,9 +159,10 @@ input[type='checkbox'] {
   -moz-appearance: none;
   appearance: none;
   margin: 0;
-  width: 1.5rem;
+  flex: 0 0 1.5rem;
+  /* Or min-width: 1.5rem; */
   height: 1.5rem;
-  border-radius: 100%;
+  border-radius: 50%;
   border: 1px solid var(--border-color);
   background-color: var(--input-toggle);
   cursor: pointer;
